@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.5 2002/03/30 15:39:25 mj Exp $
+# $Id: Makefile,v 1.6 2002/12/26 19:28:33 mj Exp $
 # Makefile for The PCI Library
 # (c) 1999 Martin Mares <mj@ucw.cz>
 
@@ -6,6 +6,8 @@ include config.mk
 
 OBJS=access.o generic.o dump.o names.o filter.o
 INCL=internal.h pci.h config.h
+
+PCILIB=libpci.a
 
 ifdef HAVE_PM_LINUX_PROC
 OBJS += proc.o
@@ -32,13 +34,18 @@ ifdef HAVE_PM_AIX_DEVICE
 OBJS += aix-device.o
 endif
 
+ifdef HAVE_PM_NBSD_LIBPCI
+OBJS += nbsd-libpci.o
+PCILIB=libpciutils.a
+endif
+
 ifdef HAVE_OWN_HEADER_H
 INCL += header.h
 endif
 
-all: libpci.a
+all: $(PCILIB)
 
-libpci.a: $(OBJS)
+$(PCILIB): $(OBJS)
 	rm -f $@
 	ar rcs $@ $^
 	ranlib $@
@@ -53,3 +60,4 @@ aix-device.o: aix-device.c $(INCL)
 dump.o: dump.c $(INCL)
 names.o: names.c $(INCL)
 filter.o: filter.c $(INCL)
+nbsd-libpci.o: nbsd-libpci.c $(INCL)
